--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,8 @@
 # Example .gitignore files: https://github.com/github/gitignore
 /bower_components/
 /node_modules/
+/video/brugertest_jessica .mp4
+/video/brugertest_julie .mp4
+/video/brugertest_Marie.mp4
+/video/cosplay.mp4
+/video/virksomhedsvideo.mp4
